--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,28 @@
 [plotting]
-PLOT_FOLDER=/home/kgadira/crop-classification/6_plots
-MEASURE_FOLDER=/home/kgadira/crop-classification/7_measures
+PLOT_FOLDER=/mnt/data2/kgadira/crop-classification/6_plots
+MEASURE_FOLDER=/mnt/data2/kgadira/crop-classification/7_measures
 
 
 [zhong-lstm]
-TRAIN_FOLDER=/home/kgadira/crop-classification/1_data/filtered-extracts-subset-ts/
-VAL_FOLDER=/home/kgadira/crop-classification/1_data/filtered-extracts-subset-ts/
-TEST_FOLDER=/home/kgadira/crop-classification/1_data/filtered-extracts-subset-ts/
+TRAIN_FOLDER=/mnt/data2/kgadira/crop-classification/1_data/filtered-extracts-subset-ts/
+VAL_FOLDER=/mnt/data2/kgadira/crop-classification/1_data/filtered-extracts-subset-ts/
+TEST_FOLDER=/mnt/data2/kgadira/crop-classification/1_data/filtered-extracts-subset-ts/
 BATCH_SIZE=32
-MODEL_FOLDER=/home/kgadira/crop-classification/8_models/crop
+MODEL_FOLDER=/mnt/data2/kgadira/crop-classification/8_models/crop
 NUM_CLASSES=6
-LEARNING_RATE=0.0005
-DROPOUT_RATE=0.5
 NUM_EPOCHS=32
 EPSILON=1e-8
 L2_REG=0
+
+
+[zhong-cnn]
+TRAIN_FOLDER=/mnt/data2/kgadira/crop-classification/1_data/filtered-extracts-subset-ts/
+VAL_FOLDER=/mnt/data2/kgadira/crop-classification/1_data/filtered-extracts-subset-ts/
+TEST_FOLDER=/mnt/data2/kgadira/crop-classification/1_data/filtered-extracts-subset-ts/
+BATCH_SIZE=32
+MODEL_FOLDER=/mnt/data2/kgadira/crop-classification/8_models/crop
+NUM_CLASSES=6
+NUM_EPOCHS=32
+EPSILON=1e-8
+L2_REG=0
+
